--- a/competition/detect_pneumonia_cxr_baseline.ipynb
+++ b/competition/detect_pneumonia_cxr_baseline.ipynb
@@ -51,7 +51,7 @@
           "height": 35
         },
         "id": "TNAZ0Xchx7sn",
-        "outputId": "8c4feeda-5ff7-4488-9afc-92f634861fbc"
+        "outputId": "128b9a81-04ea-463a-e75d-b8254f164d9a"
       },
       "execution_count": 2,
       "outputs": [
@@ -92,7 +92,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0Nquy2mg0GnU",
-        "outputId": "0e3ddc0d-a36a-4207-fbb1-959ee349ff5d"
+        "outputId": "84dc55c4-05b4-4098-9f33-7682d7ce8151"
       },
       "execution_count": 4,
       "outputs": [
@@ -100,7 +100,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x7ff5187ff090>"
+              "<torch._C.Generator at 0x7fcedb4f8090>"
             ]
           },
           "metadata": {},
@@ -139,7 +139,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-JGLzvgpvzKy",
-        "outputId": "07a99688-98be-44c3-c337-815ff6659830"
+        "outputId": "7cdfa0b7-a0c1-4148-fd7e-8db0a4cb36d7"
       },
       "execution_count": 5,
       "outputs": [
@@ -147,21 +147,21 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-01-11 11:13:01--  https://data.mendeley.com/public-files/datasets/rscbjbr9sj/files/f12eaf6d-6023-432f-acc9-80c9d7393433/file_downloaded\n",
+            "--2023-01-11 14:19:46--  https://data.mendeley.com/public-files/datasets/rscbjbr9sj/files/f12eaf6d-6023-432f-acc9-80c9d7393433/file_downloaded\n",
             "Resolving data.mendeley.com (data.mendeley.com)... 162.159.130.86, 162.159.133.86\n",
             "Connecting to data.mendeley.com (data.mendeley.com)|162.159.130.86|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://prod-dcd-datasets-public-files-eu-west-1.s3.eu-west-1.amazonaws.com/31ab5ede-ed34-46d4-b1bf-c63d70411497 [following]\n",
-            "--2023-01-11 11:13:02--  https://prod-dcd-datasets-public-files-eu-west-1.s3.eu-west-1.amazonaws.com/31ab5ede-ed34-46d4-b1bf-c63d70411497\n",
-            "Resolving prod-dcd-datasets-public-files-eu-west-1.s3.eu-west-1.amazonaws.com (prod-dcd-datasets-public-files-eu-west-1.s3.eu-west-1.amazonaws.com)... 52.218.93.8, 52.218.101.144, 52.218.62.24, ...\n",
-            "Connecting to prod-dcd-datasets-public-files-eu-west-1.s3.eu-west-1.amazonaws.com (prod-dcd-datasets-public-files-eu-west-1.s3.eu-west-1.amazonaws.com)|52.218.93.8|:443... connected.\n",
+            "--2023-01-11 14:19:47--  https://prod-dcd-datasets-public-files-eu-west-1.s3.eu-west-1.amazonaws.com/31ab5ede-ed34-46d4-b1bf-c63d70411497\n",
+            "Resolving prod-dcd-datasets-public-files-eu-west-1.s3.eu-west-1.amazonaws.com (prod-dcd-datasets-public-files-eu-west-1.s3.eu-west-1.amazonaws.com)... 52.218.1.0, 52.92.1.170, 52.92.33.10, ...\n",
+            "Connecting to prod-dcd-datasets-public-files-eu-west-1.s3.eu-west-1.amazonaws.com (prod-dcd-datasets-public-files-eu-west-1.s3.eu-west-1.amazonaws.com)|52.218.1.0|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1235512464 (1.2G) [application/zip]\n",
             "Saving to: ‘dataset.zip’\n",
             "\n",
-            "dataset.zip         100%[===================>]   1.15G  27.6MB/s    in 44s     \n",
+            "dataset.zip         100%[===================>]   1.15G  14.4MB/s    in 86s     \n",
             "\n",
-            "2023-01-11 11:13:46 (27.0 MB/s) - ‘dataset.zip’ saved [1235512464/1235512464]\n",
+            "2023-01-11 14:21:14 (13.7 MB/s) - ‘dataset.zip’ saved [1235512464/1235512464]\n",
             "\n"
           ]
         }
@@ -188,7 +188,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i3x2XyiXzOu7",
-        "outputId": "93c4c523-d52f-4541-be66-6786f9a9474c"
+        "outputId": "174bf870-8cbb-403f-cff5-808027146a68"
       },
       "execution_count": 7,
       "outputs": [
@@ -218,7 +218,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wW5zrZAzzVKS",
-        "outputId": "2ad4cf7a-d9ed-4c2e-9c2c-2eab2c30bdea"
+        "outputId": "4274a12d-b4f8-4b3d-c257-4eddfe18a6fe"
       },
       "execution_count": 8,
       "outputs": [
@@ -286,7 +286,7 @@
       "source": [
         "# dataset will be split into trainset and valset later\n",
         "dataset = datasets.ImageFolder(os.path.join(PATH_DATA_ROOT, \"train\"), transform=transform_train)\n",
-        "testset = datasets.ImageFolder(os.path.join(PATH_DATA_ROOT, \"test\"), transform=transform_val)"
+        "testset = datasets.ImageFolder(os.path.join(PATH_DATA_ROOT, \"test\"), transform=transform_test)"
       ],
       "metadata": {
         "id": "RPh04Du20AZ4"
@@ -304,7 +304,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mwIfq1eV1OaV",
-        "outputId": "712d9f8c-dd2c-477d-8598-aaad411a7eed"
+        "outputId": "e8bc207d-dc39-4e4f-e12d-9ead7b5988d2"
       },
       "execution_count": 12,
       "outputs": [
@@ -330,7 +330,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ELdYN7sK1SE3",
-        "outputId": "2d70f59e-628d-44da-cefc-ff9dbdd46c17"
+        "outputId": "a8e50d1f-db38-474f-b910-7037e9e3f2c8"
       },
       "execution_count": 13,
       "outputs": [
@@ -357,7 +357,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ckpo8z4j2bI5",
-        "outputId": "331eb342-684e-4a9c-d35c-247e56f37a18"
+        "outputId": "c444a472-cdb6-4254-ae55-45c367315516"
       },
       "execution_count": 14,
       "outputs": [
@@ -407,7 +407,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TJT2OBgB1tg1",
-        "outputId": "2ec43463-1397-4bca-d4eb-f8246e745068"
+        "outputId": "cae01153-c1aa-467a-d1a6-72796335c6f5"
       },
       "execution_count": 16,
       "outputs": [
@@ -433,7 +433,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BWev8aMr1vSE",
-        "outputId": "a8946718-c6c7-413e-8c84-4bc2866b75b4"
+        "outputId": "c3de3864-b11e-4ab5-8856-85037dd8e285"
       },
       "execution_count": 17,
       "outputs": [
@@ -459,7 +459,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1GHz4LFx5J0f",
-        "outputId": "43c322ac-3dc0-4c43-99bd-c50486586b56"
+        "outputId": "624c41fd-7042-4465-8e4f-318b38385687"
       },
       "execution_count": 18,
       "outputs": [
@@ -574,7 +574,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I2FemgD22MeL",
-        "outputId": "b1f5eced-6d41-4659-d834-53866f82ca2f"
+        "outputId": "5c8c9a70-4f2c-49d2-9b8d-5b88d003aaf5"
       },
       "execution_count": 24,
       "outputs": [
@@ -610,7 +610,7 @@
           "height": 226
         },
         "id": "yP5RQqOJ2Mc1",
-        "outputId": "f8cd4957-37a3-448d-fe9d-42de2aeeaf72"
+        "outputId": "6e13ef0c-c938-4e7f-fda0-14c7b08c4cdb"
       },
       "execution_count": 25,
       "outputs": [
@@ -655,7 +655,7 @@
           "height": 373
         },
         "id": "IUpTll6T2MS3",
-        "outputId": "052b972e-fe3a-49b2-957e-02dcfb75eb97"
+        "outputId": "093bfcb4-ccb1-400d-f0d7-5ee82f6d3219"
       },
       "execution_count": 26,
       "outputs": [
@@ -726,7 +726,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oppyKvps2MRj",
-        "outputId": "0cfe6049-201d-4068-ccf8-d5ca93845e30"
+        "outputId": "f589c674-e349-4c69-c3f8-cf54a39f157d"
       },
       "execution_count": 27,
       "outputs": [
@@ -769,7 +769,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qa5bVutl2MKu",
-        "outputId": "11ac4b2e-3d19-434d-f75a-69ee0ff99638"
+        "outputId": "1cefeb8e-84b2-4db0-be80-982c47949bc0"
       },
       "execution_count": 28,
       "outputs": [
@@ -806,7 +806,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DqjuvisAA3I-",
-        "outputId": "ae1f1d25-07e9-4bee-b653-948ba7ae108f"
+        "outputId": "94c8e593-0247-4fac-f67a-62a3af8ab779"
       },
       "execution_count": 29,
       "outputs": [
@@ -852,7 +852,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GNFh6fNIBCOe",
-        "outputId": "5258c0b9-5130-4549-d440-e5fadad1db2f"
+        "outputId": "0e85de0a-1940-421a-a89e-188abcce2c6f"
       },
       "execution_count": 30,
       "outputs": [
@@ -876,7 +876,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oj9FETfuBD8V",
-        "outputId": "0bd8aba0-ff39-403b-99c4-f800c06d8f8b"
+        "outputId": "9b97f1fe-2e80-4ba3-ae1f-de5c8e7d7e2f"
       },
       "execution_count": 31,
       "outputs": [
@@ -902,7 +902,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T--GfgctBD36",
-        "outputId": "14afeba3-1ed9-4da9-992e-a2bce9908c65"
+        "outputId": "6d8fb6e0-098a-4a59-89d0-0c75a47e1d63"
       },
       "execution_count": 32,
       "outputs": [
@@ -1046,7 +1046,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Po-528CkBDvz",
-        "outputId": "1ee0dcf1-ba25-4755-e276-3082164e16d3"
+        "outputId": "b2552f14-aa60-4708-e3b6-c54a280f9f2e"
       },
       "execution_count": 34,
       "outputs": [
@@ -1057,7 +1057,7 @@
             "Epoch: 01/03 | Train loss: nan | Validation loss: nan | Accuracy: 0.253\n",
             "Epoch: 02/03 | Train loss: nan | Validation loss: nan | Accuracy: 0.253\n",
             "Epoch: 03/03 | Train loss: nan | Validation loss: nan | Accuracy: 0.253\n",
-            "Elapsed: 290.03 seconds\n"
+            "Elapsed: 291.68 seconds\n"
           ]
         }
       ]
@@ -1094,7 +1094,7 @@
           "height": 403
         },
         "id": "1oSLFLWTBYXa",
-        "outputId": "314ec462-8a6f-44c6-8d0a-6c372309f99c"
+        "outputId": "a75237ce-282a-4e72-fa2e-de0254d8c44a"
       },
       "execution_count": 35,
       "outputs": [
@@ -1138,7 +1138,7 @@
           "height": 294
         },
         "id": "dccHDHqEBfSV",
-        "outputId": "6a30f60d-9e9d-4fa3-926e-c6d9f60aa344"
+        "outputId": "ded64750-ec20-4e2f-96ee-c6ea3fd7f818"
       },
       "execution_count": 36,
       "outputs": [
@@ -1210,7 +1210,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6jpcdgkJB__l",
-        "outputId": "82bb5db7-a5a7-4d70-f3d5-29f90dcef403"
+        "outputId": "68fa8a42-4001-4d94-a17d-35f54d7c602d"
       },
       "execution_count": 38,
       "outputs": [
@@ -1238,33 +1238,63 @@
     {
       "cell_type": "code",
       "source": [
-        "torch.save(model.state_dict(), \"model_state_dict.pth\")"
+        "PATH_SAVE = \"/content\"\n",
+        "\n",
+        "# Uncomment the following if you want to use Google Drive:\n",
+        "#\n",
+        "PATH_MOUNT = \"/content/gdrive\"\n",
+        "from google.colab import drive\n",
+        "drive.mount(PATH_MOUNT)\n",
+        "PATH_SAVE = os.path.join(PATH_MOUNT, \"MyDrive\")"
+      ],
+      "metadata": {
+        "id": "6-_hu7WUGPGH",
+        "outputId": "6b1a2e11-51dc-4dbf-a658-56e85c0dbbe1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.save(model.state_dict(), os.path.join(PATH_SAVE, \"model_state_dict.pth\"))"
       ],
       "metadata": {
         "id": "V8uHLs5-B_3p"
       },
-      "execution_count": 39,
+      "execution_count": 40,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "model_scripted = torch.jit.script(model) # export to TorchScript\n",
-        "model_scripted.save(\"model_scripted.pt\") # save"
+        "model_scripted.save(os.path.join(PATH_SAVE, \"model_scripted.pt\")) # save"
       ],
       "metadata": {
         "id": "RodUlJEAB_hB"
       },
-      "execution_count": 40,
+      "execution_count": 41,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "FnnfaD4petKW"
+        "id": "nChA4AoIJnCE"
       },
-      "execution_count": 40,
+      "execution_count": 41,
       "outputs": []
     }
   ],
